# product-service

./: Cargo.toml  build.rs
proto/: product.proto
src/: lib.rs  main.rs
src/domain/: product.rs
src/models/: product_model.rs
src/proto/: product.rs
src/repository/: mod.rs  postgresp_roduct_repos.rs  product_repos.rs
src/server/: server.rs
src/service/: product_service.rs
